# SUNRISE-Student-Led-Cruise

./: README.md
matlab/front_position/: README.md  Standard_Front_locs.m  diffdiff.m
matlab/student_led_cruise/: read_section_times.m  transect_coordinates.m
metadata/: front_position.mat  section_times.csv  transect_coordinates.json
python/: README.md  pyproject.toml
python/student_led_cruise/: __init__.py  matlab_tools.py  read_section_times.py  transect_coordinates.py
