[tool.poetry]
name = "student_led_cruise"
version = "0.1.0"
description = "Metadata and functions for student led cruise"
authors = ["Jamie Hilditch"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
pandas = "^2.2.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
